rotas de atualização de foto e nome + alterações de caminhos dos jogos

--- a/public/air-aang.html
+++ b/public/air-aang.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+    <span onclick="home()" class="logoutone logout"></span>
     <div class="x-moviment">
         <section class="High">
             <div class="overlay"></div>
@@ -86,3 +86,4 @@
 </body>
 
 </html>
+<script src="js/air-aang.js"></script>
