--- a/public/earth-toph.html
+++ b/public/earth-toph.html
@@ -14,7 +14,7 @@
 <body>
     <section id="start" class="start" onclick="mostrarTela2()">
         <div class="overlay"></div>
-        <a href="index.html" class="exit-button">Sair</a>
+        <a href="indexLogado.html" class="exit-button">Sair</a>
         <div class="content-txt">
             <h1 class="title-start">Clique em qualquer lugar para jogar</h1>
             <p class="txt-start">Utilize fones de ouvido</p>
