--- a/public/fire-AgniKai.html
+++ b/public/fire-AgniKai.html
@@ -22,7 +22,7 @@
 
     <div class="toptext">
         <h1>Agni Kai</h1>
-        <a href="index.html" class="exit">Sair</a>
+        <a href="indexLogado.html" class="exit">Sair</a>
     </div>
     <div class="fighters-choice">
         <span class="fighter" id="fighterone">
