--- a/public/indexLogado.html
+++ b/public/indexLogado.html
@@ -27,10 +27,9 @@
             <a href="#aboutMe" class="aboutMe-button standard">Sobre Mim</a>
             <a id="buttonPainel" href="dashboard/dashboard.html" class="register-button"><span class="button-content">Painel</span></a>
             <div class="perfil">
-                <div class="photo"></div>
+                <div id="photo_usuario" class="photo"></div>
                 <div class="content-perfil">
                     <span id="name_perfil">Usuário</span>
-                    <span id="email_perfil">Usuário@email.com</span>
                 </div>
             </div>
         </nav>
