--- a/public/water-quiz.html
+++ b/public/water-quiz.html
@@ -14,7 +14,7 @@
         <source src="./assets/agniKaiTheme.mp3" type="audio/mpeg">
     </audio>
     <video autoplay loop class="bg-water" src="./assets/BackgroundWater.mp4"></video>
-    <a href="index.html" class="exit-button">Sair</a>
+    <a href="indexLogado.html" class="exit-button">Sair</a>
     <section class="container">
         <div class="questions-container hide">
             <span class="question">Pergunta aqui?</span>
