alterações em todas as telas + kpis funcionando]

--- a/public/air-aang.html
+++ b/public/air-aang.html
@@ -5,6 +5,7 @@
     <meta charsettxt-cycle="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/air-aang.css">
+    <link rel="shortcut icon" href="assets/miniAang.webp">
     <title>Dobras</title>
 </head>
 
