--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -33,12 +33,12 @@
             <div class="mid">
                 <section class="high-kpis">
                     <section class="kpi-fire">
-                        <div class="high-txt high-red">Vitórias em Agni Kai</div>
-                        <div class="high-data">12</div>
+                        <div class="high-txt high-red">Média de Ataques de Fogo por Segundo<br>(Agni Kai)</div>
+                        <div id="kpiAgniKai" class="high-data">12</div>
                     </section>
                     <section class="kpi-earth">
-                        <div class="high-txt high-green">Vitórias em Toph Game</div>
-                        <div class="high-data">19</div>
+                        <div class="high-txt high-green">Acertos Totais<br>(Toph Game)</div>
+                        <div id="kpiTophGame" class="high-data">19</div>
                     </section>
                 </section>
                 <section class="quiz-performance">
