--- a/public/earth-toph.html
+++ b/public/earth-toph.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nabla&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="assets/miniAang.webp">
     <title>Toph Game</title>
     <link rel="stylesheet" href="css/toph.css">
 </head>
@@ -23,13 +24,13 @@
 
     <section id="tela2" class="game" style="display: none;">
         <div id="choice1">
-            <div id="btnLeft" class="btn" style="display: none;"><span>Left</span></div>
+            <div id="btnLeft" class="btn" style="display: none;"><span>Esquerda</span></div>
         </div>
 
         <span id="scoreboard">Pontuação: 0</span>
         <span id="msg">Escute o Som 🔊 </span>
         <div id="choice2">
-            <div id="btnRight" class="btn" style="display: none;"><span>Right</span></div>
+            <div id="btnRight" class="btn" style="display: none;"><span>Direita</span></div>
         </div>
     </section>
     <script src="js/toph.js"></script>
