--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="assets/AangCard .jpg">
+    <link rel="shortcut icon" href="assets/miniAang.webp">
     <title>Avatar Boost</title>
 </head>
 
@@ -132,7 +132,7 @@
     </main>
     <div id="cardLogin" class="login-card">
         <div class="txt-card-login">
-            <p>🚨Faça o Login</p>
+            <p>🚨 Faça o Login 🚨</p>
             <span>Para acessar áreas de dobras elementais você precisa estar logado.</span>
         </div>
         <div class="button-card-login">
