--- a/public/indexLogado.html
+++ b/public/indexLogado.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="assets/AangCard .jpg">
+    <link rel="shortcut icon" href="assets/miniAang.webp">
     <title>Avatar Boost</title>
 </head>
 
