inserção de msg pronta

--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -25,6 +25,8 @@
                     class="material-icons">bar_chart</span><span>Dados</span></a>
             <a href="#personal" class="button-style userBtn"><span
                     class="material-icons">format_paint</span><span>Personalizar</span></a>
+            <a href="forum.html" class="button-style userBtn"><span
+                    class="material-icons">format_paint</span><span>forum</span></a>
             <div onclick="sair()" class="button-exit userBtn"><span class="material-icons">logout</span> <span>Sair</span></div>
         </div>
     </section>
