--- a/public/dashboard/forum.html
+++ b/public/dashboard/forum.html
@@ -14,18 +14,20 @@
     <section class="content-forum">
         <div class="container-msg">
 
-            <div class="box-msg">
+            <div class="box_msg yourMsg">
                 <div class="content-high-msg">
                     <div class="usuario-msg">
                         <div id="photo_msg"></div>
                         <div id="name_usuario">usuario</div>
                     </div>
                     <div class="msg-usuario">
-                        <textarea class="txt-usuario" name="" id="" maxlength="250"></textarea>
+                        <textarea class="txt-usuario" id="msgBox" maxlength="240"></textarea>
                     </div>
                 </div>
                 <div class="content-low-msg">
+                    <div></div>
                     <div id="currentTime" class="content-hora"></div>
+                    <div id="currentDay" class="content-day"></div>
                     <div class="content-btn-msg">
                         <div onclick="enviarForum()" class="btn-msg material-symbols-outlined">
                             check
