funções de post e get finalizadas (forum)

--- a/public/dashboard/forum.html
+++ b/public/dashboard/forum.html
@@ -5,14 +5,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="forum.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Document</title>
 </head>
 
 <body>
+    <section class="menu">
+        <div class="user">
+            <div id="photo_usuario" class="photo"></div>
+            <div class="account">
+                <span id="name_user"></span>
+                <span id="email_usuario">Usuário@email.com</span>
+            </div>
+        </div>
+        <div class="btn-user">
+            <div onclick="redirecionarParaData()" class="button-data userBtn"><span
+                    class="material-icons">bar_chart</span><span>Dados</span></div>
+            <div onclick="redirecionarParaPersonalizar()" class="button-style userBtn"><span
+                    class="material-icons">format_paint</span><span>Personalizar</span></div>
+            <a href="forum.html" class="button-style userBtn"><span
+                    class="material-icons">format_paint</span><span>forum</span></a>
+            <div onclick="sair()" class="button-exit userBtn"><span class="material-icons">logout</span> <span>Sair</span></div>
+        </div>
+    </section>
     <section class="content-forum">
-        <div class="container-msg">
+        <div class="container-msg-usuario">
 
             <div class="box_msg yourMsg">
                 <div class="content-high-msg">
@@ -36,6 +55,7 @@
                 </div>
             </div>
         </div>
+        <div id="container_msg_others"></div>
     </section>
 </body>
 
