atualizar dobra + mudanças no forum e personalizar + inicio ranking

--- a/public/cadastrologin.html
+++ b/public/cadastrologin.html
@@ -61,18 +61,17 @@
 
       <span>Qual sua Dobra Favorita?</span>
       <label id="dobraForm" class="dobraForm">
-        <input type="radio" id="fogo" name="dobra" value="fogo">
+        <input class="radioFire" type="radio" id="fogo" name="dobra" value="fogo">
         <label for="fogo">Fogo</label><br>
-        <input type="radio" id="agua" name="dobra" value="agua">
+        <input class="radioWater" type="radio" id="agua" name="dobra" value="agua">
         <label for="agua">Água</label><br>
-        <input type="radio" id="terra" name="dobra" value="terra">
+        <input class="radioEarth" type="radio" id="terra" name="dobra" value="terra">
         <label for="terra">Terra</label><br>
-        <input type="radio" id="ar" name="dobra" value="ar">
+        <input class="radioAir" type="radio" id="ar" name="dobra" value="ar">
         <label for="ar">Ar</label><br><br>
       </label>
       <button class="btn signUp" onclick="cadastrar()">Cadastrar</button>
       <span>Você já tem uma conta? <span class="red" onclick="mudar2()">Fazer login</span></span>
-
     </div>
 
 
