--- a/public/dashboard/personalizar.html
+++ b/public/dashboard/personalizar.html
@@ -34,7 +34,7 @@
     <section id="personal" class="personal-content">
         <section class="personal">
             <div class="btn-personal">
-                <div class="tradeName btn-card">Mudar Nome</div>
+                <div class="tradeName btn-card">Mudar informações</div>
                 <div class="tradePicture  btn-card">Mudar Foto</div>
             </div>
         </section>
@@ -67,7 +67,7 @@
                         <input class="radioDobra radioAir" type="radio" id="ar" name="dobra" value="ar">
                         <label for="ar">Ar</label><br><br>
                     </label>
-                    <button class="btn_dobra">
+                    <button onclick="selectDobra()" class="btn_dobra">
                         <span class="btn_span">Atualizar</span>
                     </button>
                 </div>
