front ranking feito

--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -25,9 +25,12 @@
                     class="material-icons pagSelected">bar_chart</span><span class="pagSelected">Dados</span></a>
             <a href="forum.html" class="button-style userBtn"><span
                     class="material-icons">forum</span><span>Forum</span></a>
+            <a href="ranking.html" class="button-style userBtn"><span
+                    class="material-icons">emoji_events</span><span>Ranking</span></a>
             <a href="personalizar.html" class="button-style userBtn"><span
                     class="material-icons">format_paint</span><span>Personalizar</span></a>
-            <div onclick="sair()" class="button-exit userBtn"><span class="material-icons">logout</span> <span>Sair</span></div>
+            <div onclick="sair()" class="button-exit userBtn"><span class="material-icons">logout</span>
+                <span>Sair</span></div>
         </div>
     </section>
     <div class="info">
@@ -69,7 +72,7 @@
             </section>
         </section>
 
-        
+
 
     </div>
 
