--- a/public/dashboard/forum.html
+++ b/public/dashboard/forum.html
@@ -27,9 +27,13 @@
             <a href="forum.html" class="button-style userBtn"><span class="miniAang"></span><span
                     class="material-icons pagSelected">forum</span><span class="pagSelected">Forum</span></a>
 
+            <a href="ranking.html" class="button-style userBtn"><span
+                    class="material-icons">emoji_events</span><span>Ranking</span></a>
+
             <a href="personalizar.html" class="button-style userBtn"><span
                     class="material-icons">format_paint</span><span>Personalizar</span></a>
-            <div onclick="sair()" class="button-exit userBtn"><span class="material-icons">logout</span> <span>Sair</span></div>
+            <div onclick="sair()" class="button-exit userBtn"><span class="material-icons">logout</span>
+                <span>Sair</span></div>
         </div>
     </section>
     <section class="content-forum">
@@ -62,4 +66,3 @@
 
 </html>
 <script src="forum.js"></script>
-
