--- a/public/dashboard/personalizar.html
+++ b/public/dashboard/personalizar.html
@@ -23,6 +23,8 @@
                     class="material-icons">bar_chart</span><span>Dados</span></a>
             <a href="forum.html" class="button-style userBtn"><span
                     class="material-icons">forum</span><span>Forum</span></a>
+            <a href="ranking.html" class="button-style userBtn"><span
+                    class="material-icons">emoji_events</span><span>Ranking</span></a>
             <a href="#personal" class="button-style userBtn"><span class="miniAang"></span><span
                     class="material-icons pagSelected">format_paint</span><span
                     class="pagSelected">Personalizar</span></a>
