rota ranking feita e funfando 12

--- a/public/dashboard/ranking.html
+++ b/public/dashboard/ranking.html
@@ -38,36 +38,36 @@
       <div class="content">
         <div class="txt-game">
           <h1 class="big-txt">Agni Kai</h1>
-          <p class="small-txt">Mais Ataques de Fogo</p>
-          <p class="small-txt">(Por Segundo)</p>
+          <p class="small-txt">Média de Ataques de Fogo</p>
+          <p class="small-txt">(Por Jogo)</p>
         </div>
         <div class="container-top">
-          <div class="fotoWinner"></div>
-          <div class="towerWinnerTop2">
+          <div class="fotoWinner fotoWinner2Fogo"></div>
+          <div class="towerWinnerTop2 towerWinnerTop2Fogo">
             <div class="fotoSimbolTop2"></div>
             <div class="winnerInfoTop2">
-              <span id="name_user2">Usuario</span>
-              <span id="data_user2">6.5</span>
+              <span id="name_user2Fogo">Usuario</span>
+              <span id="data_user2Fogo">6.5</span>
             </div>
           </div>
         </div>
         <div class="container-top">
-          <div class="fotoWinner"></div>
-          <div class="towerWinnerTop1">
+          <div class="fotoWinner fotoWinner1Fogo"></div>
+          <div class="towerWinnerTop1 towerWinnerTop1Fogo">
             <div class="fotoSimbolTop1"></div>
             <div class="winnerInfoTop1">
-              <span id="name_user1">Usuario</span>
-              <span id="data_user1">7.8</span>
+              <span id="name_user1Fogo">Usuario</span>
+              <span id="data_user1Fogo">7.8</span>
             </div>
           </div>
         </div>
         <div class="container-top">
-          <div class="fotoWinner"></div>
-          <div class="towerWinnerTop3">
+          <div class="fotoWinner fotoWinner3Fogo"></div>
+          <div class="towerWinnerTop3 towerWinnerTop3Fogo">
             <div class="fotoSimbolTop3"></div>
             <div class="winnerInfoTop3">
-              <span id="name_user3">Usuario</span>
-              <span id="data_user3">5.9</span>
+              <span id="name_user3Fogo">Usuario</span>
+              <span id="data_user3Fogo">5.9</span>
             </div>
           </div>
         </div>
@@ -79,37 +79,37 @@
       <button class="btn-left" onclick="prevSection()">◀</button>
       <div class="content">
         <div class="txt-game">
-          <h1 class="big-txt">???</h1>
-          <p class="small-txt">?????</p>
-          <p class="small-txt">?</p>
+          <h1 class="big-txt">Catch Game</h1>
+          <p class="small-txt">Vezes que pegou Aang</p>
+          <p class="small-txt">(Por Jogo)</p>
         </div>
         <div class="container-top">
-          <div class="fotoWinner"></div>
-          <div class="towerWinnerTop2">
+          <div class="fotoWinner fotoWinner2Ar"></div>
+          <div class="towerWinnerTop2 towerWinnerTop2Ar">
             <div class="fotoSimbolTop2"></div>
             <div class="winnerInfoTop2">
-              <span id="name_user2">Usuario</span>
-              <span id="data_user2">6.5</span>
+              <span id="name_user2Ar"></span>
+              <span id="data_user2Ar"></span>
             </div>
           </div>
         </div>
         <div class="container-top">
-          <div class="fotoWinner"></div>
-          <div class="towerWinnerTop1">
+          <div class="fotoWinner fotoWinner1Ar"></div>
+          <div class="towerWinnerTop1 towerWinnerTop1Ar">
             <div class="fotoSimbolTop1"></div>
             <div class="winnerInfoTop1">
-              <span id="name_user1">Usuario</span>
-              <span id="data_user1">7.8</span>
+              <span id="name_user1Ar"></span>
+              <span id="data_user1Ar"></span>
             </div>
           </div>
         </div>
         <div class="container-top">
-          <div class="fotoWinner"></div>
-          <div class="towerWinnerTop3">
+          <div class="fotoWinner fotoWinner3Ar"></div>
+          <div class="towerWinnerTop3 towerWinnerTop3Ar">
             <div class="fotoSimbolTop3"></div>
             <div class="winnerInfoTop3">
-              <span id="name_user3">Usuario</span>
-              <span id="data_user3">5.9</span>
+              <span id="name_user3Ar"></span>
+              <span id="data_user3Ar"></span>
             </div>
           </div>
         </div>
@@ -125,32 +125,32 @@
           <p class="small-txt">(Total)</p>
         </div>
         <div class="container-top">
-          <div class="fotoWinner"></div>
-          <div class="towerWinnerTop2">
+          <div class="fotoWinner fotoWinner2Agua"></div>
+          <div class="towerWinnerTop2 towerWinnerTop2Agua">
             <div class="fotoSimbolTop2"></div>
             <div class="winnerInfoTop2">
-              <span id="name_user2">Usuario</span>
-              <span id="data_user2">6.5</span>
+              <span id="name_user2Agua"></span>
+              <span id="data_user2Agua"></span>
             </div>
           </div>
         </div>
         <div class="container-top">
-          <div class="fotoWinner"></div>
-          <div class="towerWinnerTop1">
+          <div class="fotoWinner fotoWinner1Agua"></div>
+          <div class="towerWinnerTop1 towerWinnerTop1Agua">
             <div class="fotoSimbolTop1"></div>
             <div class="winnerInfoTop1">
-              <span id="name_user1">Usuario</span>
-              <span id="data_user1">7.8</span>
+              <span id="name_user1Agua"></span>
+              <span id="data_user1Agua"></span>
             </div>
           </div>
         </div>
         <div class="container-top">
-          <div class="fotoWinner"></div>
-          <div class="towerWinnerTop3">
+          <div class="fotoWinner fotoWinner3Agua"></div>
+          <div class="towerWinnerTop3 towerWinnerTop3Agua">
             <div class="fotoSimbolTop3"></div>
             <div class="winnerInfoTop3">
-              <span id="name_user3">Usuario</span>
-              <span id="data_user3">5.9</span>
+              <span id="name_user3Agua"></span>
+              <span id="data_user3Agua"></span>
             </div>
           </div>
         </div>
@@ -166,32 +166,32 @@
           <p class="small-txt">(Total)</p>
         </div>
         <div class="container-top">
-          <div class="fotoWinner"></div>
-          <div class="towerWinnerTop2">
+          <div class="fotoWinner fotoWinner2Terra"></div>
+          <div class="towerWinnerTop2 towerWinnerTop2Terra">
             <div class="fotoSimbolTop2"></div>
             <div class="winnerInfoTop2">
-              <span id="name_user2">Usuario</span>
-              <span id="data_user2">6.5</span>
+              <span id="name_user2Terra"></span>
+              <span id="data_user2Terra"></span>
             </div>
           </div>
         </div>
         <div class="container-top">
-          <div class="fotoWinner"></div>
-          <div class="towerWinnerTop1">
+          <div class="fotoWinner fotoWinner1Terra"></div>
+          <div class="towerWinnerTop1 towerWinnerTop1Terra">
             <div class="fotoSimbolTop1"></div>
             <div class="winnerInfoTop1">
-              <span id="name_user1">Usuario</span>
-              <span id="data_user1">7.8</span>
+              <span id="name_user1Terra"></span>
+              <span id="data_user1Terra"></span>
             </div>
           </div>
         </div>
         <div class="container-top">
-          <div class="fotoWinner"></div>
-          <div class="towerWinnerTop3">
+          <div class="fotoWinner fotoWinner3Terra"></div>
+          <div class="towerWinnerTop3 towerWinnerTop3Terra">
             <div class="fotoSimbolTop3"></div>
             <div class="winnerInfoTop3">
-              <span id="name_user3">Usuario</span>
-              <span id="data_user3">5.9</span>
+              <span id="name_user3Terra"></span>
+              <span id="data_user3Terra"></span>
             </div>
           </div>
         </div>
