alterações feitas em aula

--- a/public/indexLogado.html
+++ b/public/indexLogado.html
@@ -137,7 +137,7 @@
     </main>
     <div id="cardLogin" class="login-card">
         <div class="txt-card-login">
-            <p>🚨Faça o Login</p>
+            <p>🚨Faça o Login🚨</p>
             <span>Para acessar áreas de dobras elementais você precisa estar logado.</span>
         </div>
         <div class="button-card-login">
